--- a/Lab/SangTM/Lap1/.project
+++ b/Lab/SangTM/Lap1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lap1</name>
+	<name>Lap</name>
 	<comment></comment>
 	<projects>
 	</projects>
